# esp32c6_plant_emo

./: .gitignore  CMakeLists.txt  README.md  create_project.bat  partitions.csv  sdkconfig  sdkconfig.defaults
main/: CMakeLists.tcpip.txt  CMakeLists.txt  CMakeLists_adc.txt  CMakeLists_wifi.txt  Kconfig.projbuild  comprehensive_analysis.cc  i2c_scanner.c  main_as7341.c  main_as7343.c  main_dual7341.c  main_tcpip.c  main_wifi.c  main_wifiless.c  mqtt_server.c  mqtt_server_fisher.c  mqtt_server_free.c  ppfd_calculator.h  sensor_data.h  stepper_motor.c  stepper_motor_continue.c  test_connection.py
